food card flipped

--- a/styles.css
+++ b/styles.css
@@ -27,24 +27,106 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
+  -webkit-perspective: 800px;
+          perspective: 800px;
+}
+
+/* .back {
+  display: block;
+  border-radius: 10px;
+  width: 160px;
+  height: 230px;
+}
+.front {
+  display: block;
+  border-radius: 10px;
+  width: 160px;
+  height: 230px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotateY(180deg);
+}
+
+.card .front {
+  transform: rotateY(180deg);
+}
+.card.flipped {
+  transform: rotateY(180deg);
+}
+.hidden {
+  display: none;
+} */
+#text {
+  width: 100%;
+  text-align: center;
+}
+
+#point {
+  width: 100%;
+  text-align: center;
+}
+
+.container {
+  width: 200px;
+  height: 260px;
+  position: relative;
+  -webkit-perspective: 800px;
+          perspective: 800px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  width: 1100px;
+  background: gray;
+  margin: 0 auto;
+  margin-top: 4em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .card {
-  background: yellow;
   width: 160px;
   height: 230px;
-  margin: 20px;
   border-radius: 10px;
-  cursor: pointer;
+  margin: 15px;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform-origin: 50% 50%;
 }
 
-.front {
-  border-radius: 10px;
-  width: 160px;
-  height: 230px;
+.card div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
-.hidden {
-  display: none;
+.card .front {
+  background: red;
+  border-radius: 10px;
+}
+
+.card .back {
+  background: blue;
+  border-radius: 10px;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.card.flipped {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 /*# sourceMappingURL=styles.css.map */
