--- a/styles.scss
+++ b/styles.scss
@@ -18,20 +18,84 @@
   margin: 0 auto;
   margin-top: 4em;
   justify-content: center;
+  position: relative;
+  perspective: 800px;
 }
-.card {
-  background: yellow;
+
+/* .back {
+  display: block;
+  border-radius: 10px;
   width: 160px;
   height: 230px;
-  margin: 20px;
-  border-radius: 10px;
-  cursor: pointer;
 }
 .front {
+  display: block;
   border-radius: 10px;
   width: 160px;
   height: 230px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotateY(180deg);
+}
+
+.card .front {
+  transform: rotateY(180deg);
+}
+.card.flipped {
+  transform: rotateY(180deg);
 }
 .hidden {
   display: none;
+} */
+#text {
+  width: 100%;
+  text-align: center;
+}
+#point {
+  width: 100%;
+  text-align: center;
+}
+
+.container {
+  width: 200px;
+  height: 260px;
+  position: relative;
+  perspective: 800px;
+  display: flex;
+  flex-flow: row wrap;
+  width: 1100px;
+  background: gray;
+  margin: 0 auto;
+  margin-top: 4em;
+  justify-content: center;
+}
+.card {
+  width: 160px;
+  height: 230px;
+  border-radius: 10px;
+  //position: absolute;
+  margin: 15px;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  -webkit-transform-origin: 50% 50%;
+}
+.card div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+.card .front {
+  background: red;
+  border-radius: 10px;
+}
+.card .back {
+  background: blue;
+  border-radius: 10px;
+  transform: rotateY(180deg);
+}
+.card.flipped {
+  transform: rotateY(180deg);
 }
