--- a/styles.css
+++ b/styles.css
@@ -6,58 +6,14 @@
 }
 
 #startbtn {
+  margin-top: 3em;
   width: 100px;
   height: 100px;
   font-size: 20px;
+  background: white;
   cursor: pointer;
 }
 
-#cardul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  width: 1100px;
-  background: gray;
-  margin: 0 auto;
-  margin-top: 4em;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: relative;
-  -webkit-perspective: 800px;
-          perspective: 800px;
-}
-
-/* .back {
-  display: block;
-  border-radius: 10px;
-  width: 160px;
-  height: 230px;
-}
-.front {
-  display: block;
-  border-radius: 10px;
-  width: 160px;
-  height: 230px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: rotateY(180deg);
-}
-
-.card .front {
-  transform: rotateY(180deg);
-}
-.card.flipped {
-  transform: rotateY(180deg);
-}
-.hidden {
-  display: none;
-} */
 #text {
   width: 100%;
   text-align: center;
@@ -69,8 +25,7 @@
 }
 
 .container {
-  width: 200px;
-  height: 260px;
+  background: #473f3f;
   position: relative;
   -webkit-perspective: 800px;
           perspective: 800px;
@@ -82,9 +37,8 @@
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   width: 1100px;
-  background: gray;
   margin: 0 auto;
-  margin-top: 4em;
+  margin-top: 2em;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -102,6 +56,7 @@
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
 }
 
 .card div {
@@ -114,7 +69,6 @@
 }
 
 .card .front {
-  background: red;
   border-radius: 10px;
 }
 
@@ -128,5 +82,9 @@
 .card.flipped {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
+}
+
+.hidden {
+  display: none;
 }
 /*# sourceMappingURL=styles.css.map */
