--- a/styles.scss
+++ b/styles.scss
@@ -3,51 +3,17 @@
   padding: 0;
   font-family: "Lora", serif;
   list-style: none;
+  //
 }
 #startbtn {
+  margin-top: 3em;
   width: 100px;
   height: 100px;
   font-size: 20px;
+  background: white;
   cursor: pointer;
 }
-#cardul {
-  display: flex;
-  flex-flow: row wrap;
-  width: 1100px;
-  background: gray;
-  margin: 0 auto;
-  margin-top: 4em;
-  justify-content: center;
-  position: relative;
-  perspective: 800px;
-}
 
-/* .back {
-  display: block;
-  border-radius: 10px;
-  width: 160px;
-  height: 230px;
-}
-.front {
-  display: block;
-  border-radius: 10px;
-  width: 160px;
-  height: 230px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: rotateY(180deg);
-}
-
-.card .front {
-  transform: rotateY(180deg);
-}
-.card.flipped {
-  transform: rotateY(180deg);
-}
-.hidden {
-  display: none;
-} */
 #text {
   width: 100%;
   text-align: center;
@@ -58,16 +24,14 @@
 }
 
 .container {
-  width: 200px;
-  height: 260px;
+  background: rgb(71, 63, 63);
   position: relative;
   perspective: 800px;
   display: flex;
   flex-flow: row wrap;
   width: 1100px;
-  background: gray;
   margin: 0 auto;
-  margin-top: 4em;
+  margin-top: 2em;
   justify-content: center;
 }
 .card {
@@ -78,7 +42,7 @@
   margin: 15px;
   transition: transform 1s;
   transform-style: preserve-3d;
-  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
 }
 .card div {
   display: block;
@@ -88,7 +52,6 @@
   backface-visibility: hidden;
 }
 .card .front {
-  background: red;
   border-radius: 10px;
 }
 .card .back {
@@ -98,4 +61,7 @@
 }
 .card.flipped {
   transform: rotateY(180deg);
+}
+.hidden {
+  display: none;
 }
