--- a/styles.scss
+++ b/styles.scss
@@ -23,7 +23,7 @@
   text-align: center;
 }
 
-.container {
+#container {
   background: rgb(71, 63, 63);
   position: relative;
   perspective: 800px;
