--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,25 @@
   list-style: none;
 }
 
+body {
+  background: #1f2224;
+  margin: 0;
+  padding: 0;
+}
+
+#intro {
+  position: absolute;
+  top: 3rem;
+  right: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+}
+
 #startbtn {
   margin-top: 3em;
   width: 100px;
@@ -14,18 +33,51 @@
   cursor: pointer;
 }
 
+#upload {
+  margin-top: 3em;
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
+  background: white;
+  cursor: pointer;
+  position: relative;
+}
+
+#uploadBtn {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  font-size: 20px;
+}
+
+#uploadinput {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  background: white;
+  cursor: pointer;
+  overflow: hidden;
+}
+
 #text {
   width: 100%;
   text-align: center;
+  color: white;
+  font-size: 20px;
 }
 
 #point {
   width: 100%;
   text-align: center;
+  color: white;
+  font-size: 30px;
 }
 
 #container {
-  background: #473f3f;
   position: relative;
   -webkit-perspective: 800px;
           perspective: 800px;
@@ -36,8 +88,8 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
-  width: 1100px;
-  margin: 0 auto;
+  width: 1200px;
+  height: 100vh;
   margin-top: 2em;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -46,9 +98,10 @@
 
 .card {
   width: 160px;
-  height: 230px;
+  height: 200px;
   border-radius: 10px;
-  margin: 15px;
+  margin-left: 15px;
+  margin-bottom: 5px;
   -webkit-transition: -webkit-transform 1s;
   transition: -webkit-transform 1s;
   transition: transform 1s;
@@ -57,6 +110,11 @@
           transform-style: preserve-3d;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
+}
+
+.card img {
+  width: 160px;
+  height: 200px;
 }
 
 .card div {
@@ -86,5 +144,11 @@
 
 .hidden {
   display: none;
+}
+
+.shadow {
+  border: 4px solid white;
+  -webkit-box-shadow: 0 0 10px #def705;
+          box-shadow: 0 0 10px #def705;
 }
 /*# sourceMappingURL=styles.css.map */
