--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,20 @@
   list-style: none;
   //
 }
+body {
+  background: #1f2224;
+  //height: 100vh;
+  //widows: 100vw;
+  margin: 0;
+  padding: 0;
+}
+#intro {
+  position: absolute;
+  top: 3rem;
+  right: 100px;
+  display: flex;
+  flex-flow: column wrap;
+}
 #startbtn {
   margin-top: 3em;
   width: 100px;
@@ -13,36 +27,76 @@
   background: white;
   cursor: pointer;
 }
-
+#upload {
+  margin-top: 3em;
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
+  background: white;
+  cursor: pointer;
+  position: relative;
+  //border: 2px green solid;
+}
+#uploadBtn {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  font-size: 20px;
+  //background: red;
+}
+#uploadinput {
+  opacity: 0;
+  //border: 2px yellow solid;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  background: white;
+  cursor: pointer;
+  overflow: hidden;
+}
 #text {
   width: 100%;
   text-align: center;
+  color: white;
+  font-size: 20px;
 }
 #point {
   width: 100%;
   text-align: center;
+  color: white;
+  font-size: 30px;
 }
 
 #container {
-  background: rgb(71, 63, 63);
+  //background: #1f2224;
   position: relative;
   perspective: 800px;
   display: flex;
   flex-flow: row wrap;
-  width: 1100px;
-  margin: 0 auto;
+  width: 1200px;
+  height: 100vh;
   margin-top: 2em;
   justify-content: center;
 }
+
 .card {
   width: 160px;
-  height: 230px;
+  height: 200px;
+  //background: red;
   border-radius: 10px;
   //position: absolute;
-  margin: 15px;
+  margin-left: 15px;
+  margin-bottom: 5px;
   transition: transform 1s;
   transform-style: preserve-3d;
   transform-origin: 50% 50%;
+  img {
+    width: 160px;
+    height: 200px;
+  }
 }
 .card div {
   display: block;
@@ -64,4 +118,8 @@
 }
 .hidden {
   display: none;
+}
+.shadow {
+  border: 4px solid white;
+  box-shadow: 0 0 10px rgb(222, 247, 5);
 }
