--- a/styles.css
+++ b/styles.css
@@ -6,57 +6,82 @@
 }
 
 body {
-  background: #1f2224;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
+  background: url(assets/wood-pattern.jpg);
+  background-size: contain;
 }
 
 #intro {
+  margin: 0;
+  padding: 0;
   position: absolute;
-  top: 3rem;
-  right: 100px;
+  right: 0;
+  height: 100%;
+  width: 25vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -ms-flex-line-pack: distribute;
+  align-content: space-around;
+  background: url(assets/tableclothes.png);
+  background-size: 100%;
 }
 
 #startbtn {
-  margin-top: 3em;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
   font-size: 20px;
   background: white;
   cursor: pointer;
+  border: 2px solid lightblue;
+}
+
+#rules {
+  color: white;
+  padding: 2em;
+}
+
+#btns {
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
 }
 
 #upload {
-  margin-top: 3em;
-  width: 100px;
-  height: 100px;
   font-size: 20px;
-  background: white;
   cursor: pointer;
-  position: relative;
 }
 
 #uploadBtn {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 2px solid lightblue;
   font-size: 20px;
+  background: white;
+  cursor: pointer;
 }
 
-#uploadinput {
-  opacity: 0;
+#image_uploads {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   font-size: 20px;
   background: white;
   cursor: pointer;
@@ -77,44 +102,56 @@ body {
   font-size: 30px;
 }
 
+#tableclothes {
+  margin: 0;
+  padding: 0;
+  width: 75%;
+  height: 100%;
+  background: url(assets/bg.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
 #container {
   position: relative;
   -webkit-perspective: 800px;
-          perspective: 800px;
+  perspective: 800px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  width: 1200px;
-  height: 100vh;
-  margin-top: 2em;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  width: 50vw;
+  height: 60vh;
+  margin: 0;
+  padding: 0;
+  top: 9em;
+  left: 100px;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -ms-flex-line-pack: distribute;
+  align-content: space-around;
 }
 
 .card {
-  width: 160px;
-  height: 200px;
+  width: 110px;
+  height: 140px;
   border-radius: 10px;
-  margin-left: 15px;
-  margin-bottom: 5px;
   -webkit-transition: -webkit-transform 1s;
   transition: -webkit-transform 1s;
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   -webkit-transform-origin: 50% 50%;
-          transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
 }
 
 .card img {
-  width: 160px;
-  height: 200px;
+  width: 110px;
+  height: 140px;
 }
 
 .card div {
@@ -123,7 +160,7 @@ body {
   width: 100%;
   position: absolute;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .card .front {
@@ -134,12 +171,12 @@ body {
   background: blue;
   border-radius: 10px;
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .card.flipped {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .hidden {
@@ -149,6 +186,6 @@ body {
 .shadow {
   border: 4px solid white;
   -webkit-box-shadow: 0 0 10px #def705;
-          box-shadow: 0 0 10px #def705;
+  box-shadow: 0 0 10px #def705;
 }
 /*# sourceMappingURL=styles.css.map */
