--- a/styles.scss
+++ b/styles.scss
@@ -6,52 +6,66 @@
   //
 }
 body {
-  background: #1f2224;
-  //height: 100vh;
-  //widows: 100vw;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
+  background: url(assets/wood-pattern.jpg);
+  background-size: contain;
 }
 #intro {
+  margin: 0;
+  padding: 0;
   position: absolute;
-  top: 3rem;
-  right: 100px;
+  right: 0;
+  height: 100%;
+  width: 25vw;
   display: flex;
   flex-flow: column wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  background: url(assets/tableclothes.png);
+  background-size: 100%;
 }
 #startbtn {
-  margin-top: 3em;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
   font-size: 20px;
   background: white;
   cursor: pointer;
+}
+#rules {
+  color: white;
+  padding: 2em;
+}
+#btns {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  background: red;
 }
 #upload {
-  margin-top: 3em;
-  width: 100px;
-  height: 100px;
+  font-size: 20px;
+  cursor: pointer;
+}
+#uploadBtn {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
   font-size: 20px;
   background: white;
   cursor: pointer;
-  position: relative;
-  //border: 2px green solid;
 }
-#uploadBtn {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  font-size: 20px;
-  //background: red;
-}
-#uploadinput {
-  opacity: 0;
+#image_uploads {
   //border: 2px yellow solid;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  //width: 100%;
+  // height: 100%;
   font-size: 20px;
   background: white;
   cursor: pointer;
@@ -69,33 +83,43 @@ body {
   color: white;
   font-size: 30px;
 }
-
+#tableclothes {
+  margin: 0;
+  padding: 0;
+  width: 75%;
+  height: 100%;
+  background: url(assets/bg.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  //background-attachment: fixed;
+}
 #container {
-  //background: #1f2224;
   position: relative;
   perspective: 800px;
   display: flex;
   flex-flow: row wrap;
-  width: 1200px;
-  height: 100vh;
-  margin-top: 2em;
-  justify-content: center;
+  width: 50vw;
+  height: 60vh;
+  margin: 0;
+  padding: 0;
+  top: 9em;
+  left: 100px;
+  justify-content: space-around;
+  align-content: space-around;
 }
 
 .card {
-  width: 160px;
-  height: 200px;
+  width: 110px;
+  height: 140px;
   //background: red;
   border-radius: 10px;
   //position: absolute;
-  margin-left: 15px;
-  margin-bottom: 5px;
   transition: transform 1s;
   transform-style: preserve-3d;
   transform-origin: 50% 50%;
   img {
-    width: 160px;
-    height: 200px;
+    width: 110px;
+    height: 140px;
   }
 }
 .card div {
